replaced with java 17 .toList() method.