@@ -14,7 +14,7 @@ import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
-import java.util.stream.Collectors;
+
 
 @RestController
 @RequestMapping("/api/studios")
@@ -34,7 +34,7 @@ public class DeveloperStudiosController {
                 developerStudioService.findAll()
                         .stream()
                         .map(DeveloperStudio::toDeveloperStudioDto)
-                        .collect(Collectors.toList()),
+                        .toList(),
                 HttpStatus.OK);
     }
 
