@@ -16,7 +16,7 @@ import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
-import java.util.stream.Collectors;
+
 
 @RestController
 @RequestMapping("/api/platforms")
@@ -36,7 +36,7 @@ public class PlatformsController {
                 platformService.findAll()
                         .stream()
                         .map(Platform::toPlatformDto)
-                        .collect(Collectors.toList()),
+                        .toList(),
                 HttpStatus.OK);
     }
 
